--- a/styles/Bio.module.scss
+++ b/styles/Bio.module.scss
@@ -3,8 +3,6 @@
 .container {
   padding: 150px 0;
   text-align: justify;
-  text-justify: auto;
-  text-align-last: center;
   max-width: 1000px;
   margin: 0 auto;
 
@@ -12,6 +10,11 @@
     text-align: center;
     font-size: 3rem;
   }
+
+  h3 {
+    padding: 20px 0;
+  }
+
 
   img {
     max-width: 1000px;
